# people-manager

./: .gitignore  Makefile  asset-manifest.json  docker-compose.yml  index.html  package-lock.json  precache-manifest.2db0084331215f74a0c90db431c6a16a.js  precache-manifest.3ad3b28c1abcb9f867f80ab3c57f565e.js  precache-manifest.913f43497b70be938322004b80d8e869.js  precache-manifest.e70aab5ed90633537722eca7ffc08d8e.js  precache-manifest.f6580c8cd7f66d1976bac0403bbc07eb.js  service-worker.js  workspace.json.code-workspace
.githooks/: pre-commit
backend/: .dockerignore  Dockerfile  app.py  db.py  pyproject.toml  settings.py
backend/people_manager/: app.py  app_gunicorn.py  appointments.py  const.py  create_db.py  people_settings.py
backend/people_manager/people/: admin.py  models.py  serializers.py  urls.py  views.py
backend/people_manager/people/migrations/: 0001_initial.py  0002_auto_20200321_2230.py  0003_auto_20200322_0949.py  0004_auto_20200322_1416.py
backend/people_manager/people_manager/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/people_manager/src/: app.py  appointments.py  const.py  create_db.py  db.py  dev_settings.py  exceptions.py  people.py  site_settings.py  user.py  utils.py
backend/src/: app.py  appointments.py  consts.py  create_db.py  db.py  people.py
frontend/: .package.json.swp  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.scss  App.tsx  AppHeader.scss  AppHeader.tsx  consts.ts  rtl.scss
static/css/: main.4145926f.chunk.css  main.4145926f.chunk.css.map  (+6 more)
(+145 files in other folders)
