[tool.poetry]
name = "poeple-manager"
version = "0.1.0"
description = "A small django backend for managing people information."
authors = ["gnir <gnir.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
pymongo = "^3.10.1"
gunicorn = "^20.0.4"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"
mypy = "^0.770"
ipython = "^7.13.0"
ipdb = "^0.13.2"
flask-cors = "^3.0.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
